Fix overflowing long email addresses on sidebar

--- a/css/common.css
+++ b/css/common.css
@@ -174,6 +174,10 @@ aside {
     max-height: 1000000px;
 }
 
+aside p {
+    font-size: 11pt;
+}
+
 aside img {
     width: 100%;
 }
